fix(mobile): keyboard is jumping

--- a/packages/app/src/style.css
+++ b/packages/app/src/style.css
@@ -53,6 +53,7 @@ body, html {
 }
 #root {
   height: 100%;
+  padding-bottom: env(keyboard-inset-height);
 }
 *, :after, :before {
   box-sizing: inherit;
